# Lumara

./: .gitignore  README.md  config.json  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
docs/: architecture.md  sidecar_spec.md  system_prompt.md
python/: config.py  main.py  requirements.txt
python/ai/: __init__.py  ollama_client.py  prompt_builder.py  response_parser.py
python/formats/: __init__.py  exporter.py  loader.py
python/processors/: __init__.py  ai_ops.py  basic.py  detail.py  geometry.py  hsl.py  portrait.py  whitebalance.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  main.rs  sidecar.rs
src/components/: EditPanel.tsx  HistoryPanel.tsx  PhotoCanvas.tsx  SuggestionCard.tsx
src/hooks/: useImageProcessor.ts  useLLMSuggestions.ts
src/store/: editStore.ts  sessionStore.ts
src/types/: lumara.d.ts
tests/python/: __init__.py  conftest.py  test_basic_processors.py  test_ollama_client.py
